# task

./: .cspell.json  .gitignore  .jscpd.json  .licensee.json  .markdownlint-cli2.jsonc  .mt.json  .n-cursor.json  .n-rules.json  .oxfmtrc.json  .oxlintrc.json  .v8rignore  AGENTS.md  CLAUDE.md  Cargo.toml  deny.toml  eslint.config.js  knip.json  package.json  vitest.config.js
.cargo/: mutants.toml
.claude/commands/: n-storybook.md  n-taze.md
.cursor/rules/: n-adr.mdc  n-bun.mdc  n-ga.mdc  n-js.mdc  n-k8s.mdc  n-rust.mdc  n-security.mdc  n-storybook.mdc  n-style-lint.mdc  n-style.mdc  n-tauri.mdc  n-test.mdc  n-text.mdc  n-tool-surface.mdc
.github/: zizmor.yml
.github/workflows/: changelog-release.yml  clean-merged-branch.yml  lint-ga.yml  lint-js.yml  lint-k8s.yml  lint-rust.yml  lint-security.yml  lint-style.yml  lint-text.yml  release-owner.yml  release.yml
app/: CHANGELOG.md  index.html  package.json  stryker.config.mjs  vite.config.js  vitest.config.js
app/.changes/: 260607-0000.md  260703-0741.md  260703-1754.md  260704-0747.md  260705-1012-2.md  260705-1012.md  260705-1034.md  260705-1152.md  260705-1310.md  260705-1502.md  260705-2024.md  260705-2313.md  260705-2314.md  260706-0827.md  260706-1000.md  260706-1100.md  260706-1400.md  260706-1700.md  260711-2050.md  260711-2125.md  260711-2215.md  260712-0836.md  260713-2141.md  260714-1740.md  260715-0430.md  260715-1655.md  260715-1816.md  260720-0802.md  260720-1730.md  260721-1652.md
app/docs/: index.md  stryker-vue-macros-ignorer.md  stryker.config.md  vite.config.md  vitest.config.md
app/src/: App.vue  attention.js  claims.js  dag-layout.js  format-ledger.js  format-relative-time.js  main.js  material-symbols-outlined.css  pipeline-state-config.js  run-draft.js  slots.js  state-config.js  task-create.js  tree.js  version-chain.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: mutants.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/docs/: build.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: config.rs  git_util.rs  journal.rs  journal_bin.rs  lib.rs  main.rs  pipeline.rs
app/src-tauri/src/docs/: config.md  git_util.md  index.md  journal.md  lib.md  main.md  pipeline.md
docs/: mt.md
docs/adr/: 260607-0710-двохрежимне-відкриття-редактора-local-vs-remote.md  260607-0717-двохрежимне-відкриття-редактора.md  260607-0717-підтримка-двох-режимів-відкриття-редактора-local-remote.md  260607-0853-візуалізація-задач-через-tauri-vue-3.md  260607-0853-деривація-стану-задач-tauri-rust.md  260607-0854-міграція-структури-з-myshare-у-task.md  260607-0856-ініціалізація-скелету-з-myshare-без-бізнес-логіки.md  260607-0859-деривація-стану-задач-із-файлової-системи-через-tauri-rust-b.md  260607-0906-scaffold-міграція-з-myshare.md  260607-0906-перенесення-scaffold-каркасу-з-myshare-до-нового-проекту-tas.md  260607-1929-додавання-детального-перегляду-задачі-через-клік-на-рядок.md  260607-2104-перегляд-деталей-задачі-q-dialog.md  260607-2104-перегляд-деталей-задачі-через-клік-на-рядку.md  260607-2108-перегляд-деталей-задачі-через-клік-на-рядок.md  260607-2110-додавання-детального-перегляду-задачі-через-клік-на-рядку.md  260607-2111-відносний-symlink-між-репозиторіями.md  260607-2111-додавання-деталей-задачі-через-клік-на-рядок.md  260607-2118-додавання-деталей-задачі-через-клік-на-рядок.md  260608-1707-перегляд-деталей-задачі-через-клік-у-tauri-застосунку.md  260608-1707-спільний-документ-через-npm-пакет-7n-mt.md  260608-1713-міграція-задач-tasks-до-mt-7n-mt.md  260608-1713-стандартизація-задач-проекту-до-формату-mt-7n-mt.md  260608-1734-прийняття-формату-7n-mt-для-зберігання-задач.md  260608-1736-міграція-формату-задач-tasks-mt-зі-специфікацією-7n-mt.md  260608-1746-групування-задач-по-workspace-у-tauri-ui.md  260608-1746-структура-задач-у-форматі-mt-mt.md  260609-0654-декомпозиція-rust-сканера-в-самодостатній-crate-mt-scanner.md  260609-0654-декомпозиція-сканера-у-crate-mt-scanner.md  260609-0702-міграція-директорії-задач-з-tasks-до-mt.md  260609-0707-міграція-задач-у-формат-mt.md  260611-1922-оновлення-enum-taskstate-у-mt-scanner-відповідно-до-нової-сп.md  260611-1922-оновлення-taskstate-mt-scanner-та-ui-синхронізація.md  260613-0642-клонування-sibling-репо-mt-для-cargo-patch.md  260613-0642-клонування-репозиторію-nitra-mt-як-sibling-каталог-для-cargo.md  260613-0711-редизайн-ui-до-мінімалістичного-технологічного-стилю.md  260613-0711-редизайн-ui-до-простого-лаконічного-технологічного-стилю.md  260613-0834-клонування-sibling-репо-mt-для-відновлення-cargo-залежності.md  260614-0818-create-task-rust-та-канонічна-структура-вузла.md  260614-0818-делегування-всієї-роботи-з-файловою-системою-в-rust.md  260614-0825-архітектурне-рішення-за-сесією.md  (+91 more)
docs/specs/: 260614-n-tool-surface.md  260615-agent-gateway.md  260711-owner-app.md  260714-cognitive-delegation.md
k8s/: README.md
k8s/cnpg/: cluster.yaml
k8s/dev-pod/: rbac.yaml  template.yaml
k8s/teleport/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  roles.yaml  service.yaml  statefulset.yaml
mt/lint-fix-bun-package-json-9529d0c2/: task.md
mt/lint-fix-doc-files-check-5df61846/: task.md
mt/lint-fix-js-knip-1aa23aeb/: task.md
mt/lint-fix-k8s-manifests-f9cb7a94/: task.md
mt/lint-fix-style-lint-2ec724ef/: task.md
owner/: CHANGELOG.md  Cargo.toml  index.html  package.json  stryker-vue-macros-ignorer.mjs  vite.config.js  vitest.config.js
owner/owner-llm/: Cargo.toml
owner/owner-llm/examples/: staff_brief_live.rs
owner/owner-llm/examples/docs/: index.md  staff_brief_live.md
owner/owner-llm/src/: lib.rs
owner/owner-llm/src/docs/: index.md  lib.md
owner/owner-llm/tests/: fake_omlx.rs
owner/owner-llm/tests/docs/: fake_omlx.md  index.md
owner/src-tauri/: Cargo.toml  tauri.conf.json
owner/src-tauri/capabilities/: default.json  updater.json
owner/src-tauri/docs/: build.md  index.md
owner/src-tauri/icons/: .n-minify-image.tsv  icon.icns
owner/src-tauri/src/: config.rs  lib.rs  llm.rs  main.rs
owner/src-tauri/src/docs/: config.md  index.md  lib.md  llm.md  main.md
(+214 files in other folders)
