[package]
name = "task"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "task"

[lib]
name = "task_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless journal FS binary — spawned by the node MCP bin so that agent-side
# request journaling also goes through Rust (FS-in-Rust). Shares src/journal.rs
# with the lib's Tauri commands; avoids linking the Tauri GUI stack.
[[bin]]
name = "journal"
path = "src/bin/journal.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
tauri-plugin-agent = { git = "https://github.com/nitra/tauri-components" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# TODO: після merge nitra/mt#5 (orchestrator) прибрати branch
mt-core = { git = "https://github.com/nitra/mt.git", branch = "claude/orchestrator" }
notify = "8"
tauri-plugin-mcp-bridge = "0.11.2"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

[profile.dev]
strip = true
