[package]
name = "task"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "task"
[lib]
name = "task_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless journal FS binary — spawned by the node MCP bin so that agent-side
# request journaling also goes through Rust (FS-in-Rust). Shares src/journal.rs
# with the lib's Tauri commands; avoids linking the Tauri GUI stack.
#
# journal МУСИТЬ жити саме у src/bin/ — Tauri-бандлер знаходить і ПІДПИСУЄ
# додаткові бінарники скануванням src/bin по ФС (перевірено v0.4.1); винесення
# в інший шлях лишає бінарник у бандлі непідписаним (падав codesign v0.5.3).
# Зворотний бік: doc-files кладе у src/bin дзеркало docs/, яке бандлер трактує
# як ще один бінарник (падали v0.5.0–v0.5.2) — тому src/bin/docs/ у .gitignore:
# CI-checkout завжди чистий, а локальна генерація доки не комітиться.
[[bin]]
name = "journal"
path = "src/bin/journal.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
# Shared agent journal + ACP-client commands (plugin:agent|*) — same crate the
# mlmail/myshare/mikrotik apps use. Pinned to a specific rev (not floating) so
# a future push to the package repo can't silently change this app's Rust
# surface underneath it.
tauri-plugin-agent = { git = "https://github.com/nitra/tauri-components", rev = "87f87e74ab56358746e75af8904abec96f4648d1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
mt-core = { git = "https://github.com/nitra/mt.git" }
notify = "8"
tauri-plugin-mcp-bridge = "0.12.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

[profile.dev]
strip = true
