[package]
name = "owner"
version = "0.1.0"
description = "Owner desktop app — decision queue over the mt task forest"
authors = ["nitra"]
edition = "2021"

[lib]
name = "owner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-process = "2.3.1"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mt-core = { git = "https://github.com/nitra/mt.git" }
owner-llm = { path = "../owner-llm" }
notify = "8"
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[dev-dependencies]
tempfile = "3"
